--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <header>
         <div class="content flex_space">
             <div class="logo">
-                <img src="" alt="">
+                <img src="/images/logo1.png" alt="">
+            </div>
+            <div class="navlinks">
+                <ul id="menulist">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#rooms">Rooms</a></li>
+                    <li><a href="#pages">Pages</a></li>
+                    <li><a href="#news">News</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </div>
         </div>
     </header>
