javascript file added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./styling/style.css">
     <title>Mageganya Farm-stay</title>
 </head>
@@ -11,7 +12,7 @@
     <header>
         <div class="content flex_space">
             <div class="logo">
-                <img src="/images/logo1.png" alt="">
+                <img src="/images/logo.png" alt="">
             </div>
             <div class="navlinks">
                 <ul id="menulist">
@@ -21,9 +22,13 @@
                     <li><a href="#pages">Pages</a></li>
                     <li><a href="#news">News</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><i class="fa fa-search"></i></li>
+                    <li><button class="primary-btn">BOOK NOW</button></li>
                 </ul>
+                <span class="fa fa-bars" onclick="menutoggle()"></span>
             </div>
         </div>
     </header>
+    <script src="script.js"></script>
 </body>
 </html>
