--- a/index.html
+++ b/index.html
@@ -540,24 +540,22 @@
       <div class="owl-carousel owl-carousel2 owl-theme">
         <div class="item">
           <i class="fa-solid fa-quote-right"></i>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h3>Julia Robertson</h3>
-          <label>Julia Robertson</label>
+          <p>Having visted this wonderful place, i came upon a guesthouse that was beyond every expectation i could have percieved. The educative stance that they took and the knowledge they shared combined with the very tasty food had me believing that i was back in my own home. Will definitely be a consistent client here. 
+        </p>
+          <h3>Jeremiah Kioni</h3>
+          <label>Member of Parliament</label>
         </div>
         <div class="item">
           <i class="fa-solid fa-quote-right"></i>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h3>Julia Robertson</h3>
-          <label>Julia Robertson</label>
+          <p> My first visit to Mageganya had me spellbound at the organisation and effeciency of the self sustaining concept of the farm. The quality of hospitality and the kindness and patience with which we were treated made this my second home and will always be their honored guest.</p>
+          <h3>Joshua Irungu</h3>
+          <label>Governor</label>
         </div>
         <div class="item">
           <i class="fa-solid fa-quote-right"></i>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h3>Julia Robertson</h3>
-          <label>Julia Robertson</label>
+          <p>Every visit i have to Mageganya Farm alsways has me in awe at the splendour and peace that i alwaays find there. I have brought my family, church members and friends; and will continue to do so because no time have i ever visited the place and been disappointed in any way.</p>
+          <h3>Sammy</h3>
+          <label>Reverend A.C.K</label>
         </div>
       </div>
     </div>
@@ -587,7 +585,7 @@
       <div class="heading">
         <h1>NEWS</h1>
         <h2>Our News</h2>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        <p>Most of our activities to give you a unique experience are found on the farm but here are some spoilers.
       </div>
 
 
@@ -595,34 +593,34 @@
         <div class="left grid2">
           <div class="items">
             <div class="image">
-              <img src="images/blog-1.png" alt="">
+              <img src="images/layer.jpg" alt="">
             </div>
             <div class="text">
-              <h2>Finibus bonorum malorm.</h2>
+              <h2>Training</h2>
               <div class="admin flex">
                 <i class="fa fa-user"></i>
-                <label>Admin</label>
+                <!-- <label>Admin</label> -->
                 <i class="fa fa-heart"></i>
-                <label>500</label>
+                <!-- <label>500</label> -->
                 <i class="fa fa-comments"></i>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>We dont just have amazing hospitality, but also we provide training on Farming</p>
             </div>
           </div>
           <div class="items">
             <div class="image">
-              <img src="images/blog-2.png" alt="">
+              <img src="images/sunset.jpg" alt="">
             </div>
             <div class="text">
-              <h2>Finibus bonorum malorm.</h2>
+              <h2>Photoshoots</h2>
               <div class="admin flex">
                 <i class="fa fa-user"></i>
-                <label>Admin</label>
+                <!-- <label>Admin</label> -->
                 <i class="fa fa-heart"></i>
-                <label>500</label>
+                <!-- <label>500</label> -->
                 <i class="fa fa-comments"></i>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Here at Mageganya, we do love to watch the sunsetand what better place to capture it? </p>
             </div>
           </div>
         </div>
@@ -633,8 +631,8 @@
               <img src="images/blog-s1.png" alt="">
             </div>
             <div class="stext">
-              <h2>Etiam Vel Nequ</h2>
-              <p>Lorem ipsum dolor sit amet constur adipisicing elit sed do eiusmtem por incid.
+              <h2>Sauna</h2>
+              <p>We have our relaxing sauna in which you can come and decompress. 
               </p>
             </div>
           </div>
@@ -643,8 +641,8 @@
               <img src="images/blog-s2.png" alt="">
             </div>
             <div class="stext">
-              <h2>Etiam Vel Nequ</h2>
-              <p>Lorem ipsum dolor sit amet constur adipisicing elit sed do eiusmtem por incid.
+              <h2>Farm Training</h2>
+              <p>Farming and training on farming is one of our key activities.
               </p>
             </div>
           </div>
@@ -653,8 +651,8 @@
               <img src="images/blog-s3.png" alt="">
             </div>
             <div class="stext">
-              <h2>Etiam Vel Nequ</h2>
-              <p>Lorem ipsum dolor sit amet constur adipisicing elit sed do eiusmtem por incid.
+              <h2>Agro-Tourism</h2>
+              <p>Have you ever spent time at a farmstay and learned something new? Here we are for you.
               </p>
             </div>
           </div>
@@ -665,9 +663,9 @@
 
   <section class="newsletter mtop">
     <div class="container flex_space">
-      <h1>Subscribe to Our Newsletter</h1>
-      <input type="text" placeholder="Your Email">
-      <input type="text" value="Subscribe">
+      <h1>Come Pay us visit and experience Mageganya farm for yourself.</h1>
+      <!-- <input type="text" placeholder="Your Email">
+      <input type="text" value="Subscribe"> -->
     </div>
   </section>
 
@@ -675,19 +673,18 @@
   <footer>
     <div class="container grid">
       <div class="box">
-        <img src="images/logo-2.png" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img src="images/logo.png" alt="">
+        <p>To keep in touch with us and what we are upto, Follow us on our social media pages</p>
 
         <div class="icon">
           <i class="fa fa-facebook-f"></i>
           <i class="fa fa-instagram"></i>
-          <i class="fa fa-twitter"></i>
-          <i class="fa fa-youtube"></i>
+          <!-- <i class="fa fa-twitter"></i>
+          <i class="fa fa-youtube"></i> -->
         </div>
       </div>
 
-      <div class="box">
+      <!-- <div class="box">
         <h2>Links</h2>
         <ul>
           <li>Company History</li>
@@ -696,24 +693,24 @@
           <li>Services</li>
           <li>Privacy Policy</li>
         </ul>
-      </div>
+      </div> -->
 
       <div class="box">
         <h2>Contact Us</h2>
-        <p>Lorem ipsum dolor sit amet constur adipisicing elit sed do eiusmtem por incid.
+        <p>You can contact us on the various channes available Below
         </p>
         <i class="fa fa-location-dot"></i>
-        <label>1201 park street, Avenue, Dhanmondy, Dhaka. </label> <br>
+        <label>Bahati, Gathanji subcounty, Nyahururu </label> <br>
         <i class="fa fa-phone"></i>
-        <label>[88] 657 524 332</label> <br>
+        <label>+254 700 400 165 / +254 0110511858</label> <br>
         <i class="fa fa-envelope"></i>
-        <label>info@dentar.com</label> <br>
+        <label>mageganyafarm@gmail.com</label> <br>
       </div>
     </div>
   </footer>
 
   <div class="legal">
-    <p class="container">Copyright (c) 2022 Copyright Holder All Rights Reserved.</p>
+    <p class="container">Copyright (c) 2023 Copyright Holder All Rights Reserved.</p>
   </div>
 
 
