image changed in news

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
           </div>
           <div class="box flex">
             <div class="img">
-              <img src="images/blog-s3.png" alt="">
+              <img src="images/catcherbox.jpg" alt="">
             </div>
             <div class="stext">
               <h2>Agro-Tourism</h2>
