final images added

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="owl-carousel owl-carousel1 owl-theme">
           <div class="items">
             <div class="image">
-              <img src="images/room-1.png" alt="">
+              <img src="images/room3.jpg" alt="">
             </div>
             <div class="text">
               <h2>Standard Rooms</h2>
@@ -209,7 +209,7 @@
           </div>
           <div class="items">
             <div class="image">
-              <img src="images/room-2.png" alt="">
+              <img src="images/room3.jpg" alt="">
             </div>
             <div class="text">
               <h2>Standard Rooms</h2>
@@ -230,7 +230,7 @@
           </div>
           <div class="items">
             <div class="image">
-              <img src="images/room-4.png" alt="">
+              <img src="images/room1.jpg" alt="">
             </div>
             <div class="text">
               <h2>Deluxe Rooms</h2>
@@ -251,7 +251,7 @@
           </div>
           <div class="items">
             <div class="image">
-              <img src="images/room-5.png" alt="">
+              <img src="images/room1.jpg" alt="">
             </div>
             <div class="text">
               <h2>Deluxe Rooms</h2>
@@ -609,7 +609,7 @@
           </div>
           <div class="items">
             <div class="image">
-              <img src="images/sunset.jpg" alt="">
+              <img src="images/compound.jpg" alt="">
             </div>
             <div class="text">
               <h2>Photoshoots</h2>
@@ -628,7 +628,7 @@
         <div class="right">
           <div class="box flex">
             <div class="img">
-              <img src="images/blog-s1.png" alt="">
+              <img src="images/logo2.png" alt="">
             </div>
             <div class="stext">
               <h2>Sauna</h2>
@@ -638,7 +638,7 @@
           </div>
           <div class="box flex">
             <div class="img">
-              <img src="images/blog-s2.png" alt="">
+              <img src="images/veggies.jpg" alt="">
             </div>
             <div class="stext">
               <h2>Farm Training</h2>
@@ -677,8 +677,8 @@
         <p>To keep in touch with us and what we are upto, Follow us on our social media pages</p>
 
         <div class="icon">
-          <i class="fa fa-facebook-f"></i>
-          <i class="fa fa-instagram"></i>
+          <i class="fa fa-facebook-f"><p>Mageganya farmstay</p></i>
+          <i class="fa fa-instagram"><p>Mageganya Farm</p></i>
           <!-- <i class="fa fa-twitter"></i>
           <i class="fa fa-youtube"></i> -->
         </div>
