feat: links and active class link to different pages generated

--- a/accommodation.html
+++ b/accommodation.html
@@ -17,8 +17,8 @@
           </div>
           <div class="navlinks">
               <ul id="menulist">
-                  <li><a href="index.html" class="active">Home</a></li>
-                  <li><a href="accommodation.html">Farmstay</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="accommodation.html" class="active">Farmstay</a></li>
                   <li><a href="menu.html">Menu</a></li>
                   <li><a href="farm.html">Farmlife</a></li>
                   <li><a href="sites.html">Sites & Sounds</a></li>
