--- a/menu.html
+++ b/menu.html
@@ -17,9 +17,9 @@
           </div>
           <div class="navlinks">
               <ul id="menulist">
-                  <li><a href="index.html" class="active">Home</a></li>
+                  <li><a href="index.html" >Home</a></li>
                   <li><a href="accommodation.html">Farmstay</a></li>
-                  <li><a href="menu.html">Menu</a></li>
+                  <li><a href="menu.html" class="active">Menu</a></li>
                   <li><a href="farm.html">Farmlife</a></li>
                   <li><a href="sites.html">Sites & Sounds</a></li>
                   <li><a href="contact.html">Contact</a></li> 
