feat: links and active class link to different pages generated

--- a/accommodation.html
+++ b/accommodation.html
@@ -29,6 +29,6 @@
   </header>
   <!-- end of the navigation section -->
 
-  <script></script>
+  <script src="script.js"></script>
 </body>
 </html>
