--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
   </header>
   <!-- end of the navigation section -->
 
-  <script></script>
+  <section>
+    <!-- within this section a brief introduction to mageganya farm will be done via quick snippets showcasing the other pages -->
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
