--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,6 @@
   </header>
   <!-- end of the navigation section -->
 
-  <script></script>
+  <script src="script.js"></script>
 </body>
 </html>
